--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Mu Vision Sensor III
-version=1.1.6
-author=Morpx
-maintainer=Arduino <info@arduino.cc>
-sentence=Mu Vision Sensor III, arduino driver.
-paragraph=
-category=Device Control
-url=http://www.morpx.com
+version=1.1.7
+author=DFRobot
+maintainer=Morpx
+sentence=Mu Vision Sensor III, arduino driver(SKU: SEN0314).
+paragraph=Sensors can identify multiple target objects, such as color detection, sphere detection, human detection, card recognition, etc, The detection results can be outputted through UART or I2C communication.
+category=Sensor
+url=https://github.com/DFRobot/DFRobot_MuVisionSensor
 architectures=avr
